# hpcourse

./: .gitignore  .gitmodules  LockFreeSet.java  LockFreeSetImpl.java  NBHashTable.cpp  NBHashTable.h  README.md  main.cpp  rufus.ini  лаб 1 Хавьер Бенитез 3304
3304/Javier B/2/: LockFreePriorityQueue.java  pom.xml
FlowGraph/: Makefile
FlowGraph/src/: main.cpp
aptu/302/kravchenko_yura/: task.cpp
aptu/302/tonkikh/1/: CMakeLists.txt  main.c  utils.c  utils.h  value.c  value.h
aptu/302_17/bugakova/: producer-consumer.cpp
aptu/302_17/kravchenko_yura/: task.cpp
aptu/302_17/rebryk/: main.cpp
aptu/302_17/rebryk/hw3/: CMakeLists.txt  main.cpp
aptu/302_17/stas_belyaev/: CMakeLists.txt
aptu/604_15/kaa/1/: Cargo.toml  README.md
aptu/604_15/kaa/1/src/: chat.rs  lib.rs  proto_reader.rs  shell.rs
aptu/604_15/kaa/1/src/pb/: mod.rs  server.rs
aptu/604_15/kaa/1/src/pb/worker/: connection.rs  mod.rs  utils.rs
aptu/604_15/kaa/1/src/post/: message.proto  message.rs  mod.rs
aptu/604_15/spa/1/: LICENSE  README.md  async-chat-server.cabal  stack.yaml
aptu/604_15/spa/1/src/: Main.hs
aptu/604_15/spa/1/src/ChatProtocol/: Message.hs
aptu/604_15/spa/1/src/ChatProtocol/Message/: Type.hs
aptu/604_16/bibaev/: .gitignore  README.md  parallel.sln
aptu/604_16/chernov/solution/: CMakeLists.txt  README.md  main.cpp
aptu/604_16/dip/: .gitignore
aptu/604_16/flow_graph_a_sl/: Makefile  matrix.cpp  random_image.h
aptu/604_16/gea/1/: CMakeLists.txt  README.md  image_mat.h  main.cpp
aptu/604_16/gsr/1/: CMakeLists.txt  img_ops.h  main.cpp
aptu/604_16/mordberg/: .gitignore
aptu/604_16/mordberg/1/: CMakeLists.txt
aptu/604_16/mordberg/1/src/: Image.cpp  Image.h  ImageProcessor.cpp  ImageProcessor.h  main.cpp
aptu/604_16/ptp/: image.cpp  image.h  main.cpp
aptu/604_16/rns/rns_1/: CMakeLists.txt  image.cpp  image.h  main.cpp
aptu/604_16/serebro/1/: CMakeLists.txt  main.cpp
aptu/604_16/shugaepov/: CMakeLists.txt  main.cpp
aptu/604_16/stashevsky/: CMakeLists.txt  graph.cc  graph.h  main.cc  utils.cc  utils.h
aptu/604_16/tin/1/: .gitignore  CMakeLists.txt  image.cpp  image.hpp  main.cpp  node_functions.hpp
aptu/604_17/kravtsun/: .gitignore
aptu/604_17/kravtsun/3/: .gitignore  CMakeLists.txt  README.md
aptu/604_17/kravtsun/3/src/: common.h  elements.cpp  elements.h  image.cpp  image.h  main.cpp  process.cpp  process.h
aptu/604_17/malyutina/: .gitignore
aptu/604_17/sosin_task01/: CMakeLists.txt  main.cpp
aptu/604_17/tishencko/: build.gradle  settings.gradle
aptu/604_17/yaveyn/1/: CMakeLists.txt  main.cpp
hse/: README
hse/BPM161/kazakov/1/: CMakeLists.txt
hse/BPM161/kazakov/1/include/: consumer_parameters.h  no_value_exception.h  random.h  value_storage.h
hse/BPM161/kazakov/1/src/: main.cpp  random.cpp  value_storage.cpp
hse/BPM161/lupuleac/: main.cpp
hse/BPM161/orlova/: main.cpp
hse/BPM161/sharkova/opencl-1/: CMakeLists.txt  cl.hpp  convolution.cl  main.cpp
hse/BPM161/shvetsova/: CMakeLists.txt  main.cpp
hse/BPM161/yutman/: main.cpp
itmo/: README
itmo/M4236/Kalinin/lab4/: CMakeLists.txt  cl.hpp  main.cpp  scan.cl
itmo/M4236/golyshev/1/: CMakeLists.txt
itmo/M4236/golyshev/1/src/: main.cpp
itmo/M4236/golyshev/3/: CMakeLists.txt  main.cpp  matrix_conv.cl
itmo/M4236/lapko/hw1_pthreads/: CMakeLists.txt  main.cpp  tester.py
itmo/M4236/orishchenko/: CMakeLists.txt  main.cpp
itmo/M4236/shemetova/: Makefile  main.c  matrix_conv.cl
itmo/M4236/strebezhev/: .gitignore  CMakeLists.txt  convolution.c  main.cpp
lab4/: Makefile  models.h  task4.cpp
leti/0303/nas/: ChatServer.cpp  ChatServer.h  ChatServerHandler.cpp  ChatServerHandler.h  main.cpp
leti/0303/pka/1/: CMakeLists.txt  Message.proto  README
leti/0303/pka/1/src/: chat.cpp  client.cpp  client.h  message.cpp  message.h  server.cpp  server.h
leti/0381/fan/1/: CMakeLists.txt
leti/0381/fan/1/chat_client/: chat_client.cpp
leti/0381/fan/1/common/: Message.pb.cc  Message.proto  chat_message.h
leti/1303/FlowGraph_VasiljevAV/: FlowGraph.cpp  res.txt  stdafx.cpp
leti/1303/Shevskiy V.S. Lab1 Complete to check/: stdafx.cpp
leti/1303/bli/1/: CMakeLists.txt  main.cpp
leti/1303/dam/1/: CMakeLists.txt
leti/1303/dam/1/heads/: CImageGen.h
leti/1303/pvs/: README.md
leti/1303/pvs/1/: CMakeLists.txt  README.md
leti/1303/pvs/1/cmake/modules/: FindTBB.cmake
leti/1303/pvs/1/src/: dct2.cpp
leti/1303/zav/1/: CMakeLists.txt  README  main.cpp  matrix.cpp  matrix.h  matrix_algorithm.cpp  matrix_algorithm.h  test.cpp  test.h
leti/1303/zda/1/: CMakeLists.txt  README.md  image.cpp  image.h  main.cpp
leti/1303/zda/1/include/: brightnessinverter.h  common.h  fileoutput.h  fixedbrightness.h  image.h  imagecleanup.h  imagegenerator.h  joinkeymatcher.h  maxbrightness.h  meanbrightness.h  minbrightness.h  pointhighlighter.h
leti/1303/zda/1/src/: brightnessinverter.cpp  fileoutput.cpp  fixedbrightness.cpp  image.cpp  imagecleanup.cpp  imagegenerator.cpp  joinkeymatcher.cpp  main.cpp  maxbrightness.cpp  meanbrightness.cpp  minbrightness.cpp  pointhighlighter.cpp
leti/1304/: Matrix.cpp
leti/1304/aa/: Matrix.h  Utils.h  main.cpp
leti/1304/bai/: .gitignore
leti/1304/dea/1/: CMakeLists.txt  image.cpp  image.h  main.cpp  pixel.h  program_settings.cpp  program_settings.h
leti/1304/kd/1/: CMakeLists.txt
leti/1304/kd/1/include/: Image.h  ImageFiller.h  ImageInverser.h  ImageLineWorker.h
leti/1304/kd/1/src/: ImageHighlighter.cpp  ImageTransformer.cpp  main.cpp
leti/1304/kns/1/: .gitignore  .gitmodules  CMakeLists.txt  averageNode.h  brightNode.h  flow.cpp  flow.h  inverseNode.h  lightNode.h  main.cpp  utils.cpp  utils.h
leti/1381/Muravev/: flowGraph.cpp  image.h  main.cpp
leti/1381/bdv/: main.cpp  myflowgraph.cpp  myflowgraph.h  myflowgraph_types.h  structs.h
leti/1381/cna/: cna_1.pro  comporator.cpp  image.cpp  image.h  main.cpp
leti/2303/: CMakeLists.txt  LockFreeSet.java  LockFreeSetImpl.java  Main.java  main.cpp
leti/3303/: ProducersConsumers.cpp
leti/МРП/: oper.cpp  oper.h  pixel.h  tbb.cpp
МРП/: graph_types.h  image.h  labr1.pro  oper.h
(+3264 files in other folders)
