name:                async-chat-server
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/SergeevPavel/async-chat-server#readme
license:             BSD3
license-file:        LICENSE
author:              SergeevPavel
maintainer:          sergeev.pavel.al@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable async-chat-server
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , protocol-buffers
                     , protocol-buffers-descriptor
                     , network
                     , async
                     , containers
                     , bytestring
                     , timers
                     , suspend
                     , process
                     , split
